k8/rhaiis-deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
    spec:
      containers:
        - name: vllm
          image: registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.0.0
          command: ["python3", "-m", "vllm.entrypoints.openai.api_server"]
          args: ["--model", "RedHatAI/Llama-3.2-1B-Instruct-FP8", "--trust-remote-code"]
          ports:
            - containerPort: 8000
          resources:
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      imagePullSecrets:
        - name: redhat-pull-secret
