k8/rhaiis-deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vllm 
  name: vllm
spec:
  selector:
    app: vllm
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
