k8/rhaiis-deployment/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vllm 
  name: vllm
spec:
  to:
    kind: Service
    name: vllm
  port:
    targetPort: 8000
  tls:
    termination: edge
